--- a/bloodlines.html
+++ b/bloodlines.html
@@ -27,12 +27,11 @@
                 <input type="date" id="dob" name="dob"> 
             </div>
             <div>
-                <label for="male">Male</label>
-                <input type="checkbox" id="male" name="male">
-            </div>
-            <div>
-                <label for="female">Female</label>
-                <input type="checkbox" id="female" name="female">
+                <label for="sex">Sex:</label>
+                <label for="buck">Buck</label>
+                <input type="checkbox" id="buck" name="buck">  
+                <label for="doe">Doe</label>
+                <input type="checkbox" id="doe" name="doe">
             </div>
             <div>
                 <label for="bbreed">Buck's breed</label>
