--- a/ranchhome.html
+++ b/ranchhome.html
@@ -12,14 +12,18 @@
         <a href="our-goats.html" class="mygoats">Our goats</a>
        </nav>
      </header>  
- <body>      
-       <img src="Boss front.png" class="boss"><br>
+ <body>
+      <figure> 
+        <a href="Boss front.png" target="_blank">     
+       <img src="Boss front.png" class="boss">
+       <figcaption>Boss</figcaption></a>
+      </figure>
      <div>
-         <h2>About us</h2>
-         <p>Our ranch is a verteran owned, small family-run operation. This allows us time to watch and evaluate the goats as they grow and mature. Our goats are treated kindly and a raised friendly. </p>
-         <h2>Our mission</h2>
+         <h2>About us:</h2>
+         <p>Our ranch is a verteran owned, small family-run operation. This allows us time to watch and evaluate the goats as they grow and mature. Our goats are treated kindly and a raised friendly. We mainly breed Savanna doe's for purebreed and Boer doe's for meat production.</p>
+         <h2>Our mission:</h2>
          <p>Our goal is to produce the best quality Savanna breed stock at a reasonable price. We have carefully selected bloodlines that go back to original import animals. We also take great care in managing our herd and our land.</p>
-         <h2>A brief history in Savanna goats</h2>
+         <h2>A brief history in Savanna goats:</h2>
          <p>The white Savanna goat breed was developed from indigenous goats of South Africa. Various farmers bred what was known as white Boer goats for a number of years in South Africa. One the advantages of these white goats was the fact that the white color is dominant over most other colors. The other reason is that there is a big demand for white goats for slaughter purposes for various reasons.<br> 
         In 1957, Cilliers and Sons along the Vaal River became the best-known of the originators of this meat goat breed. On the rugged, harsh bush country where temperatures and rainfall can vary to a marked extent, natural selection played a big role in the development of these fertile, easy to care for, heat and drought resistant animals. These goats have thick, pliable skins with short white hair. The Savanna has excellent reporduction, muscular development, good bones and strong legs and hooves. Although these goats have white hair, they are selected for totally black pigmented skin, horns, hooves and all bare skin areas to avoid injury by strong ultra-violet rays.<br>
         The original Savanna importers in the United States maintained the natural selection development and continued the hardy meat goat breed. They noted that the half Savanna kid got us faster after birth and nursed quicker than their other goats. The Savanna breed is relatively new to the United States, having been imported in the late 1990's. The breed is a large framed, extremely well-muscled goat with white color containing a few black pigments found on the ears. The body characteristics resemble those of the Boer goat. The breed is very addaptable and is successful on grazing, as well as on intensive pastures.<br>
